--- a/src/Components/Styles.css
+++ b/src/Components/Styles.css
@@ -682,6 +682,7 @@ body {
     padding-bottom: 10px;
     height: fit-content;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    max-width: fit-content;
 }
 
 .small-grid h2 {
@@ -817,12 +818,32 @@ body {
     transition: background 0.3s;
 }
 
-.small-grid .time-blocks {
+/* .small-grid .time-blocks {
     display: flex;
     flex-wrap: wrap;
     row-gap: 10px;
-    column-gap: 4px;
+    column-gap: 13px;
     justify-content: space-around;
+} */
+
+
+
+/* .small-grid .time-blocks {
+
+} */
+
+.small-grid .time-blocks .t1 {
+    display: flex;
+    row-gap: 10px;
+    column-gap: 8px;
+    text-align: center;
+    margin: 4px auto;
+}
+
+.small-grid .time-blocks .t2 {
+    display: flex;
+    column-gap: 8px;
+    margin-top: 12px;
 }
 
 .small-grid .time-block {
@@ -830,7 +851,11 @@ body {
     font-size: 10px;
     padding: 4px 6px;
     border-radius: 8px;
+    margin-right: auto;
+    margin-left: auto;
 }
+
+
 
 .small-grid div.washed-out {
     color: #ccc;
@@ -1105,7 +1130,7 @@ body {
 
 .footer {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     text-align: center;
     gap: 40px;
     background-color: #3f4394;
